--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ display:inline-block;
 
       <!--<a class="btn" href="mailto:name@email.com">CONTACT ME</a>-->
       </tr>
-      <a class="footer-link" href="http://www.savewalterwhite.com/">If u wanna donate any money for my lung c****r, click here :D.</a>
-      <p>©Heisenberg.</p>
+      <a class="footer-link" href="http://www.savewalterwhite.com/">If u wanna donate, click here :D</a>
+      <p>©Heisenberg</p>
     </div>
 
     </html>
