--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@ h4 {
   font-family: 'Dosis', sans-serif;
 }
 
+ .section-button{
+    padding-top:7px;
+   position:absoltute;
+   left:3rem;
+    }
+    
 .profession {
   padding-top: 0;
   padding-bottom: 0;
@@ -175,9 +181,12 @@ display:inline-block;
       });
     });
   </script>
-
+  
+<section class="section-button">
   <div id="mydiv" class="off">
     <button class="submit" type="button">ON/OFF</button>
+    </section>
+  
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <table align="center">
       <tr>
